--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
   "prometheus-client",
   "python-dateutil",
   "PyYAML",
+  "snowflake-sqlalchemy<1.3",
   "SQLAlchemy<1.4",
   "sqlalchemy_aio>=0.17",
   "toolrack>=4",
